# person_persenton

./: .gitignore  README.md  sqlite_to_mysql_first.py
fastapi/: .env.example  .gitignore  mysql_init.sql  pyproject.toml  restart.sh  server.py  start.sh
fastapi/api/: lifespan.py  main.py
fastapi/api/middlewares/: auth_middleware.py  user_config_middleware.py
fastapi/chroma/33047432-6efe-4089-8400-7012315df681/: index_metadata.pickle
fastapi/citation_system/: __init__.py  app.py  config.py  requirements.txt
fastapi/citation_system/README/: README.md  README2.md  项目构建说明.ini
fastapi/citation_system/data/: citation_results.jsonl  collection.tsv  documents.jsonl  documents.txt  entity_aliases.json  eval_dataset.jsonl  id_mapping.json  queries.jsonl
fastapi/citation_system/demo/: demo.py  example.md  run_citations_from_queries.py
fastapi/citation_system/models/: readme.md
fastapi/citation_system/scripts/: build_index.py  build_index_example.sh  init_environment.sh  quick_start.py
fastapi/citation_system/src/: citation.py  (+9 more)
fastapi/models/: api_error_model.py  generate_presentation_request.py  pptx_models.py  presentation_with_slides.py
fastapi/services/: database.py  image_generation_service.py  llm_client.py  llm_tool_calls_handler.py  pptx_presentation_creator.py  webhook_service.py
fastapi/tests/: AdvancedSemanticSearcher.py  HybridQASystem.py  numeric_sentence_search.py  semantic_sentence_search.py
fastapi/utils/: api_embedding.py  chat_config.py  citations.py  error_handling.py  get_dynamic_models.py  get_env.py  process_slides.py  web_search.py
(+268 files in other folders)
